--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -6,7 +6,7 @@
 		min-height: 180px;
 		display: flex;
 		cursor: pointer;
-		z-index: -1;
+		position: inherit;
 	}
 }
 
@@ -18,6 +18,7 @@
 		min-height: 180px;
 		display: flex;
 		cursor: pointer;
+		position: inherit;
 	}
 }
 
